[package]
name = "gui_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = {version = "0.1.21", registry = "kellnr"}
worldgen_unwrap = { version = "0.1.0", registry ="kellnr"}
bevy = "0.12.1"
bevy_third_person_camera = "0.1.7"
bevy-inspector-egui = "0.21.0"
bevy_extern_events = "0.3.0"
rand = "0.8.5"
lazy_static = "1.4"
rodio = "0.17.3"

trustus_resource_collector = {version = "0.1.0", registry = "kellnr"}
tRust_us_Path_finding = {version = "0.1.0", registry = "kellnr"}
tile-resource-mapper-tool = {version = "1.0.1", registry = "kellnr"}
bessie = {version = "0.1.11", registry = "kellnr"}
bob_lib = {version = "0.1.3", registry = "kellnr"}
ghost_journey_journal = {version = "0.1.1", registry = "kellnr"}

[dependencies.strum]
version = "0.25.0"

[dependencies.strum_macros]
version = "0.25.3"
