[package]
name = "gui_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robotics_lib = {version = "0.1.21", registry = "kellnr"}
worldgen_unwrap = { version = "0.1.0", registry ="kellnr"}
bevy = "0.12.1"
bevy_third_person_camera = "0.1.7"
bevy-inspector-egui = "0.21.0"
bevy_extern_events = "0.3.0"
rand = "0.8.5"
num = "0.4"