[package]
name = "project"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
crossterm = "0.22.0"

robotics_lib = { version = "0.1.19", registry = "kellnr" }

worldgen_unwrap = { version = "0.1.0", registry = "kellnr" }

tile-resource-mapper-tool = { version = "1.0.1", registry = "kellnr" }

trustus_resource_collector = { version = "0.1.0", registry = "kellnr" }
tRust_us_Path_finding = { version = "0.1.0", registry = "kellnr" }

bessie = { version = "0.1.11", registry = "kellnr" }

lazy_static = "1.4.0"
rand = "0.8.5"
strum_macros = "0.25.3"
strum = "0.25.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.12.0"
clap = { version = "4.4.11", features = ["derive"] }
bevy = "0.12.1"
bevy_third_person_camera = "0.1.7"
bevy-inspector-egui = "0.21.0"
bevy_extern_events = "0.3.0"

OwnerSheeps_Sound_Tool = { version = "0.1.0", registry = "kellnr" }
owner_sheeps_medium_stonks = { version = "0.1.0", registry = "kellnr" }
